# public-ip-address

./: Cargo.toml  Dockerfile  build_and_push.sh  deploy.env  docker-compose.yaml
service/: Cargo.toml
service/src/: main.rs
